--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -1,4 +1,4 @@
-<div class="lory">
+<div class="lory  hero">
 <div class="slider js_percentage percentage">
     <div class="frame js_frame">
         <ul class="slides js_slides">
