adding max-width 560 and pull quote styels

--- a/src/css/post.css
+++ b/src/css/post.css
@@ -41,6 +41,7 @@
 @import "modules/events.css";
 @import "modules/moving-picture.css";
 @import "modules/program-search.css";
+@import "modules/pull-quote.css";
 @import "modules/routing.css";
 @import "modules/section--home.css";
 @import "modules/social-media.css";
