--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -15,7 +15,7 @@
     <title><system-page-title/> | Bethel University Minnesota</title>
     <link href="https://www.bethel.edu/cdn/images/favicon.ico" rel="icon" type="image/x-icon"/> 
 
-    <link rel="stylesheet" type="text/css" href="css/newt.css">
+    <link rel="stylesheet" type="text/css" href="css/blanco.css">
 
     <script>
         window.lazySizesConfig = window.lazySizesConfig || {};
