--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,4 +1,4 @@
-<div class="sectionRequestInfo" style="background: #eef8ff;">
+<div class="sectionRequestInfo" style="background: #f6f9fa;">
 	<div class="inner  pv6">
 		<div class="grid  grid--center">
 			<div class="grid-cell">
