--- a/src/css/modules/lory.css
+++ b/src/css/modules/lory.css
@@ -11,7 +11,7 @@
 
         @mixin respond-min 830px{
             max-height: calc(100vh - 55px);
-            margin-top: -98px;
+            margin-top: -114px;
         }
     }
 
@@ -155,9 +155,12 @@
     }
 
     &.arrowsBottom {
-        .prev,
+        .prev {
+            float: left;
+            margin-left: calc(50% - 50px);
+        }
         .next {
-
+            right: 50%;
         }
     }
 
