--- a/src/css/modules/stickyNav.css
+++ b/src/css/modules/stickyNav.css
@@ -1,7 +1,7 @@
 .stickyBar {
 	/* position: sticky; */
 	/* display: flex; */
-	padding: 1em;
+	/* padding: 1em; */
 	top: 0;
 	/* background: $bethel--blue; */
 	z-index: 1000;
@@ -15,9 +15,10 @@
 }
 
 .stickyBar .grid-cell {
-	background: #eef8ff;
+	background: #f6f9fa;
 	border: 1px solid #0069aa;
 	border-radius: 4px;
+	margin-top: 3em;
 	/* background: #fff; */
 	/* box-shadow: 0px 0px 20px #bbb; */
 }
