adding in 'big-list'

--- a/src/css/post.css
+++ b/src/css/post.css
@@ -46,6 +46,7 @@
 @import "modules/section--home.css";
 @import "modules/social-media.css";
 @import "modules/action-nav.css";
+@import "modules/big-list.css";
 
 @import "enhance/carousel.css";
 
