--- a/src/templates/pages/random.hbs
+++ b/src/templates/pages/random.hbs
@@ -4,8 +4,6 @@ layout: default
 pageTitle: Admissions Routing
 ---
 
-{{!-- <p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p> --}}
-
 <div class="inner--content">
     <div class="page__title">
         <h1 itemprop="name">Admissions</h1>
@@ -112,7 +110,28 @@ pageTitle: Admissions Routing
     <div class="grid">
         <div class="grid-cell  u-medium-3-5">
             <div class="medium-grid-pad-2x">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas repellat animi laudantium accusamus culpa ipsa error a, accusantium, numquam rem officia vitae enim distinctio praesentium? Quibusdam nisi possimus deleniti quam facilis ullam officia accusamus ex itaque fuga, magni tempore eum quaerat aspernatur reiciendis blanditiis eligendi minima? Possimus quibusdam nam sint vel illum libero eaque veritatis ad, quas temporibus pariatur molestiae, veniam provident voluptatum cupiditate, voluptatem doloremque ullam? Aliquid, reprehenderit similique ab magni eum deleniti nihil laborum quo placeat dolor soluta doloribus a nostrum. Aspernatur tenetur minus adipisci dignissimos consequuntur ab explicabo commodi eum similique ex veniam id, quod quidem? Ipsum voluptatem cum saepe, repudiandae dignissimos voluptas harum beatae? Modi aliquam unde, quis iste, alias accusamus recusandae nisi sed sint odio pariatur assumenda? Blanditiis adipisci ex voluptatum non labore tempora eveniet libero saepe, dolorem delectus unde consequatur voluptates, fugiat totam amet placeat quas in alias? Architecto dolorem iure, aliquam veritatis laboriosam cum in porro accusantium facilis ullam officiis omnis magni debitis eum voluptatem rerum asperiores voluptatibus deserunt quos provident culpa voluptates molestias distinctio ab. Possimus natus amet obcaecati temporibus tempore cumque numquam mollitia, ad reprehenderit nemo corporis! Repudiandae optio, quia error numquam expedita aliquam dignissimos labore, corporis et nostrum at doloremque?</p>
+            
+                    <div class="bigList">
+                        <div class="bigList__item">
+                            <div class="bigList__body">
+                                <h3>Lorem ipsum dolor sit amet</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, quasi. Corrupti perspiciatis rerum ex aliquid. At exercitationem maiores quidem harum?</p>    
+                            </div>
+                        </div>
+                        <div class="bigList__item">
+                                <div class="bigList__body">
+                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, quasi. Corrupti perspiciatis rerum ex aliquid. At exercitationem maiores quidem harum?</p>    
+                                </div>
+                            </div>
+                            <div class="bigList__item">
+                                    <div class="bigList__body">
+                                        <h3>Lorem ipsum dolor sit amet</h3>
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, quasi. Corrupti perspiciatis rerum ex aliquid. At exercitationem maiores quidem harum?</p>    
+                                    </div>
+                                </div>
+                    </div>
+            
             </div>
         </div>
         <div class="grid-cell">
