--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -5,7 +5,7 @@ pageTitle: Test title
 ---
 
 <style>
-    @media (min-width: 830px){
+    @media (min-width: $large){
         .global__header {
             background: rgba(0,0,0,.2);
             z-index: 100
