--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -2,34 +2,37 @@
 {{#each movingPic}} 
     {{#if show}}
 
-        <div class="moving-picture"  style="position:fixed; z-index:1;margin-top: -150px;width: 100%;">
-            <div class="moving-picture__media">
-                <div id="vid-wrap" style="min-width: 100%;"></div>
+        <div class="heroVideo  heroVideo--home">
+            <div class="heroVideo__media">
+                <div id="heroVideo__wrap"></div>               
+
                 <script type="text/javascript">
-                        if (window.matchMedia("(min-width: 1100px)").matches) {
-                            var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';
-                           
+
+                    const mql = window.matchMedia('only screen and (min-width: 912px)')
+                    const handleMQL = function(mql) {
+                        if (mql.matches) {
+                            var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';                        
                             vidStr += '<source src="https://www.bethel.edu/_homepages/www/video/welcome2-2018.mp4" type="video/mp4" />';                            
                             vidStr += '<img src="https://cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/welcome-week-2016-2x1.jpg" />';
                             vidStr += '</video>';
-                            document.getElementById('vid-wrap').innerHTML = vidStr;
+                            document.getElementById('heroVideo__wrap').innerHTML = vidStr;
                             document.getElementById('vid').play();
+                        } else {
+                            const imgStr = '<img class="lazyload" data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/feature/lead-confidence-2x1.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/lead-confidence-2x1.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/lead-confidence-2x1.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/feature/lead-confidence-2x1.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/feature/lead-confidence-2x1.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/feature/lead-confidence-2x1.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/lead-confidence-2x1.jpg 1600w" data-sizes="auto">'
+                            document.getElementById('heroVideo__wrap').innerHTML = imgStr;
                         }
+                    }
+                    handleMQL(mql)
+                    mql.addListener(handleMQL)
+
                 </script>
-                {{!-- <picture>
-                    <!--[if IE 9]><video style="display: none"><![endif]-->
-                    <source srcset="{{ this.bigImg }}" media="(min-width: 830px)" />
-                    <source srcset="{{ this.mobileImg }}" />
-                    <!--[if IE 9]></video><![endif]-->
-                    <img class="lazyload" alt="image with artdirection" data-sizes="auto" />
-                </picture> --}}
             </div>
 
-            <div class="moving-picture__overlay  xjs-animateSequence">
-                <h2 class="moving-picture__overlay__headline xseq">{{ this.headline }}</h2>
-                {{!-- <p class="moving-picture__overlay__teaser seq">{{ this.teaser }}</p> --}}
+            <div class="heroVideo__overlay">
+                <h2 class="heroVideo__overlay__headline">{{ this.headline }}</h2>
+                {{!-- <p class="heroVideo__overlay__teaser seq">{{ this.teaser }}</p> --}}
                 <p class="ta--center">
-                    <a class="xmoving-picture__overlay__button btn" href="admissions/index.php">{{ this.button }}</a>
+                    <a class="xheroVideo__overlay__button btn" href="admissions/index.php">{{ this.button }}</a>
                 </p>
             </div>
         </div>
