--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -1,5 +1,5 @@
 ---
-title: Home 4 - Space
+title: Home 5
 layout: default
 pageTitle: Test title
 ---
@@ -554,28 +554,56 @@ pageTitle: Test title
     <section class="mt0  pb4--large" style="background: #fffff1">
 
         <div class="attnHeader">
-                <div class="inner ">
-                    <h2>Live what you believe</h2>
-                    <h3 class="h2">Every calling begins with a single truth.</h3>        
-                </div>
+            <div class="inner ">
+                <h2>Live what you believe</h2>
+                <h3 class="h2">Every calling begins with a single truth.</h3>        
+            </div>
+        </div>
+
+        <div class="grid">
+            <div class="grid-cell  u-medium-3-5">
+                <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1600w" >         
             </div>
 
-            <div class="grid">
-                <div class="grid-cell  u-medium-3-5">
-                    <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/two-smiling.jpg 1600w" >         
+            <div class="grid-cell  feature--right">
+                <div class="">
+                    <p>Beyond academics, there's something that draws Bethel students together. It's a sense of calling, a commitment to shared values, and a deep desire to fulfill a greater purpose.</p>
+                    <p>You’ll be challenged to think critically about your convictions and consider some of life’s most difficult questions from a Christian perspective. And when you take your place in our increasingly diverse world, you’ll know what it means to own your faith and live for something more.</p>
                 </div>
+            </div>
+        </div>
 
-                <div class="grid-cell  feature--right">
-                    <div class="">
-                        <p>Beyond academics, there's something that draws Bethel students together. It's a sense of calling, a commitment to shared values, and a deep desire to fulfill a greater purpose.</p>
-                        <p>You’ll be challenged to think critically about your convictions and consider some of life’s most difficult questions from a Christian perspective. And when you take your place in our increasingly diverse world, you’ll know what it means to own your faith and live for something more.</p>
+        <section class="mv6">
+            <div class="inner  pv6">                    
+                <div class="grid  proofPoints">
+                    <div class="grid-cell  proofPoint  mr2--large  mb2">
+                        <div class="ph2">
+                            <div class="proofPoint__border">
+                                <p class="proofPoint__number">68%</p>
+                                <p class="h5  mv0  fw400">have a leadership role in their work, school, church, or community</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-cell  proofPoint  mr2--large  mb2">
+                        <div class="ph2">
+                            <p class="proofPoint__number">85%</p>
+                            <p class="h5  mv0  fw400">of alumni are active in their faith community</p>
+                            <!-- <small><i>— Money Magazine</i></small> -->
+                        </div>
+                    </div>
+                    <div class="grid-cell  proofPoint  mr2--large  mb2">
+                        <div class="ph2">
+                            <p class="proofPoint__number">70%</p>
+                            <p class="h5  mv0  fw400">volunteer with other charitable causes, compared to 49% nationally</p>
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
 
-            <div class="inner">
+        <div class="inner">
 
-            <div class="grid  mv6  pv6">
+            <div class="grid  mb6  pb6">
                 <div class="grid-cell">
                     <div class="grid-pad-2x">
                         <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/chapel-laurel.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/chapel-laurel.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/chapel-laurel.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/chapel-laurel.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/chapel-laurel.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/chapel-laurel.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chapel-laurel.jpg 1600w"
