--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -1,112 +1,9 @@
 ---
 title: LAYOUT
 layout: default
+pageTitle: First-Time transfers
 ---
 
-<dl class="dl--generic">
-	<dt>Total Credits</dt>
-	<dd>60</dd>
-
-	<dt>Cost per Credit</dt>
-	<dd>$430</dd>
-
-	<dt>Program Length</dt>
-	<dd>26 months</dd>
-
-	<dt>Description</dt>
-	<dd>Our Associate of Science degree gives you the option to major in business and leadership or create an individualized major. Both options will upgrade your career skills and prepare you for further education.</dd>
-
-	<dt>Next Start Date:</dt>
-	<dd>Spring 2017</dd>
-
-	<dt>Deliveries:</dt>
-	<dd>Online</dd>
-</dl>
-
-<div class="section--home__holder  section--home__academics  parallax">
-	<div class="inner">
-		<div class="grid">
-			<div class="grid-cell u-medium-1-2">
-				<div class="grid-pad-2x">				
-					<h2>Make discoveries that reach beyond the classroom.</h2>	
-					<p>Find out how a Bethel education will prepare you to follow your dreams, do work that matters, and live with purpose.</p>
-					<ul>
-						<li><a href="#">Undergrad majors and minors</a></li>
-						<li><a href="#">Adult undergrad degrees</a></li>
-						<li><a href="#">Graduate programs</a></li>
-						<li><a href="#">Seminary programs</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>	
-</div>
-
-<div class="section--home__holder  section--home__faith  parallax">
-	<div class="inner">
-		<div class="grid">
-			<div class="grid-cell  u-medium-1-2">
-				<div class="grid-pad-2x">
-					<h2>Live out your faith.</h2>
-					<p>We work hard to understand Christ’s message and try our best to spread his love, every day. Here's what it looks like.</p>
-					<ul>
-						<li><a href="//www.bethel.edu/about/faith">Faith at Bethel</a></li>
-						<li><a href="//www.bethel.edu/undergrad/campus-ministries">Worship &amp; Ministry</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>	
-</div>
-
-<div class="section--home__holder  section--home__community  parallax">
-	<div class="inner">
-		<div class="grid">
-			<div class="grid-cell u-medium-1-2">
-				<div class="grid-pad-2x">				
-					<h2>Join a community you’ll call home.</h2>	
-					<p>Our students are gracious servants, compassionate friends, and thoughtful neighbors who are intentional about helping each other grow, and having a lot of fun while they're at it.</p>
-					<ul>	
-						<li><a href="//www.bethel.edu/undergrad/student-life/">Student Life at Bethel</a></li>
-						<li><a href="//www.bethel.edu/undergrad/student-life/activities/">Clubs &amp; Organizations</a></li>
-						<li><a href="//www.bethel.edu/undergrad/student-life/activities/">Athletics</a></li>
-						<li><a href="//www.bethel.edu/undergrad/student-life/housing-dining/">Housing &amp; Dining</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>	
-</div>
-
-
-<div class="section--home__holder  section--home__story">
-	<div class="inner">
-		<div class="grid">
-			<div class="grid-cell  u-medium-1-2  u-large-3-5  rotate-text">
-				{{!-- <p>You’re looking for a place where you can</p> --}}
-
-				{{!-- <h3 class="animate  rotate-text__holder">challenge yourself</h3> --}}
-{{!-- 				<span><em>support the people around you</em></span>
-				<span><em>find community</em></span>
-				<span><em>laugh...a lot</em></span>
-				<span><em>learn new things</em></span>
-				<span><em>live out your faith</em></span>
-				<span><em>make a difference</em></span>
-				<span><em>serve your neighbors</em></span>
-				<span><em>explore the world</em></span>
-				<span><em>create hope</em></span>
-				<span><em>work hard</em></span>
-				<span><em>dream big</em></span>
-				<span><em>live with purpose</em></span>
-				<span><em>have tons of fun</em></span>
-				<span><em>ask important questions</em></span>
-				<span><em>spread Christ’s love</em></span> --}}
-				<h2 class="mv1">Your story starts here.</h2>
-				<p>Here, you’ll be challenged to think critically and creatively as you make discoveries that can change the world. You’ll be supported by a community of friends and mentors as you follow your dreams and discover your purpose. And you’ll be inspired to do and be your best as you find new ways to spread Christ’s love.</p>
-				<h3 class="mv2">You were made to accomplish incredible things. Get started at Bethel.</h3>
-			
-				<p class="mt2"><a href="//www.bethel.edu/admissions/request-info/" class="btn  mb1  mr1">Request info</a> <a href="//www.bethel.edu/admissions/apply/" class="mb1 btn">Start your application</a></p>			
-			</div>
-		</div>
-	</div>	
+<div class="main">
+	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa iste iusto eius. Eius sequi nobis aspernatur dicta veniam eaque ipsum accusamus fugiat eveniet. Laborum quasi numquam enim. Odit, eius deleniti porro numquam esse commodi vel laudantium aliquid eveniet. Explicabo culpa nobis deserunt est consequatur quis ad quisquam numquam dolores iure exercitationem aliquid qui a quam, enim beatae, reprehenderit facere. Quia odit praesentium veritatis porro reiciendis quo, explicabo non, sed neque rerum, voluptatum unde atque. Inventore at, cumque qui quod alias iste, consequuntur aliquid mollitia minus dolor asperiores cupiditate provident perspiciatis voluptas odit consequatur similique officia non voluptate rerum corporis? Animi accusamus similique blanditiis rem sequi nostrum quia iste distinctio vitae aut. Minus vero omnis praesentium quasi cum asperiores labore hic cumque. Tempore blanditiis doloribus officiis minus a porro aut obcaecati. Officia commodi sunt magni est temporibus odit quibusdam ad maiores. Inventore corporis magni, fuga sequi magnam dolorum fugiat unde. Neque sed nihil veritatis vel est, ut cumque quos optio animi dolorem deleniti dolores reiciendis molestiae vero sint, doloribus, fugit cum nemo. At, est recusandae sed animi doloribus cum rerum voluptatibus. Nulla, nesciunt esse? Quod sint recusandae laboriosam doloremque ipsum. Eligendi suscipit voluptatum labore repudiandae sit laudantium totam doloremque, vel modi?</p>
 </div>
