--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -4,57 +4,47 @@
 {{> head }}
 
 <body class="no-js" id="top">
-<script type="text/javascript">document.body.className = document.body.className.replace("no-js","js");</script>
+	<script type="text/javascript">document.body.className = document.body.className.replace("no-js","js");</script>
 
 	{{> global--school}}
-
 	<div class="inner-wrap--global__navigation" id="js-inner-wrap--global__navigation">
-
 		{{> global__header }}
-
-		{{!-- {{> school__navigation }} --}}
-
-{{!-- 		<div class="grid-section mt0" >
-		{{> moving-picture }}
-		</div> --}}
-
-		{{!-- {{> section--apply }} --}}
-
-		    	{{!-- {{> site__navigation }} --}}
-
-
-		        {{!-- {{> page__title }} --}}
-
+		{{> school__navigation }}
+		{{> page__banner }}
+		
+		<div class="inner--content">
+			<div class="inner-wrap--site__navigation">
+				{{!-- {{> page__title }} --}}
+				{{> site__navigation }}
 				{% body %}
-
-				{{!-- {{> section--home__academics }} --}}
+			</div>
+		</div>
 
 		{{> global__footer }}
-
 	</div>
 
-<script>
-    function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
-    if (!window.HTMLPictureElement) {
-        document.createElement('picture');
-        window.picturefillCFG = window.picturefillCFG || [];
-        picturefillCFG.push(["algorithm", "saveData"]);
-        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
-    };
+	<script>
+		function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
+		if (!window.HTMLPictureElement) {
+			document.createElement('picture');
+			window.picturefillCFG = window.picturefillCFG || [];
+			picturefillCFG.push(["algorithm", "saveData"]);
+			loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.1/picturefill.min.js");
+		};
 
-	var cb = function() {
-		var l = document.createElement('link'); l.rel = 'stylesheet';
-		l.href = 'https://cloud.typography.com/6664852/692222/css/fonts.css';
-		var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-	};
-	var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-	webkitRequestAnimationFrame || msRequestAnimationFrame;
-	if (raf) raf(cb);
-	else window.addEventListener('load', cb);
+		var cb = function() {
+			var l = document.createElement('link'); l.rel = 'stylesheet';
+			l.href = 'https://cloud.typography.com/6664852/692222/css/fonts.css';
+			var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+		};
+		var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+		webkitRequestAnimationFrame || msRequestAnimationFrame;
+		if (raf) raf(cb);
+		else window.addEventListener('load', cb);
 
-    // loadJS("https://www.bethel.edu/cdn/js/webpack.js");
-    loadJS("js/webpack.js");
-</script>
+		// loadJS("https://www.bethel.edu/cdn/js/webpack.js");
+		loadJS("js/webpack.js");
+	</script>
 
 </body>
 </html>
