update news & events

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -580,21 +580,21 @@ pageTitle: Test title
                         <div class="ph2">
                             <div class="proofPoint__border">
                                 <p class="proofPoint__number">68%</p>
-                                <p class="h5  mv0  fw400">have a leadership role in their work, school, church, or community</p>
+                                <p class="h5  mv0  fw400">alumni who hold a leadership role in their work, school, church, or community</p>
                             </div>
                         </div>
                     </div>
                     <div class="grid-cell  proofPoint  mr2--large  mb2">
                         <div class="ph2">
                             <p class="proofPoint__number">85%</p>
-                            <p class="h5  mv0  fw400">of alumni are active in their faith community</p>
+                            <p class="h5  mv0  fw400">alumni who are active in their faith community</p>
                             <!-- <small><i>— Money Magazine</i></small> -->
                         </div>
                     </div>
                     <div class="grid-cell  proofPoint  mr2--large  mb2">
                         <div class="ph2">
                             <p class="proofPoint__number">70%</p>
-                            <p class="h5  mv0  fw400">volunteer with other charitable causes, compared to 49% nationally</p>
+                            <p class="h5  mv0  fw400">alumni who volunteer with other charitable causes, compared to 49% nationally</p>
                         </div>
                     </div>
                 </div>
@@ -682,7 +682,7 @@ pageTitle: Test title
                     <div style="min-width: 300px; max-width: 500px; margin: 4em auto;">
                         <h2 class="alpha">Schedule a visit</h2>
                         <p class="mb2">Tucked serenely into the woods of Arden Hills, our waterfront campuses are just 15 minutes north of the Twin Cities. Come and experience our vibrant community for yourself—we’d love to show you around.</p>
-                        <p class="mb4"><a class="btn  btn-outline">Schedule Visit</a></p>
+                        <p class="mb4"><a class="btn  btn-outline">Schedule a visit</a></p>
                         {{> events }}
                     </div>
                 </div>
@@ -734,7 +734,7 @@ pageTitle: Test title
                                         <p><small>April 14, 2018</small></p>
                                 </div>
                             </div>
-                            <p class="center  mt3"><a class="btn  btn-outline">See more Stories</a></p>
+                            <p class="center  mt3"><a class="btn  btn-outline">See more stories</a></p>
                         </div>
                     </div>
                 </div>
