--- a/src/templates/partials/news.hbs
+++ b/src/templates/partials/news.hbs
@@ -60,4 +60,4 @@
                 Seminary to increase.</p>
         </div>
     </div>
-    <a class="btn  btn-outline  center" href="http://www.bethel.edu/news/news-archive">More News</a>
+    <a class="btn  btn-outline  center" href="http://www.bethel.edu/news/news-archive">More news</a>
